# CrystaLLM-pi

./: .dockerignore  .exclude-rsync.txt  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  _api.py  _args.py  _dataloader.py  _hp-search-gpu-jarv-mp-ft.py  _hp-search.py  _load_and_generate.py  _tokenizer.py  _train.py  crystallm_api.py  docker_tests.txt  entrypoint.sh  pyproject.toml  requirements-alignn.txt  requirements.txt  run-pxrd-cod.py  run-pxrd-mp-scratch-20perp-temp.py  run-pxrd-mp-scratch-20shot-uncond.py  run-pxrd-mp-scratch-20shot.py  run-tests-api.py  run_mace.py  setup.py
HF-cif-tokenizer/: added_tokens.json  tokenizer_config.json  vocabulary.json
_config_files/: deepspeed_default.json  test.jsonc  test_single_gpu.jsonc
_models/: PKV_model.py  Prepend_model.py  Slider_model.py  __init__.py
_pipelines/: sequential_training.py
_scripts_in_dev/: CG_pipeline.py  _multi-runs.py  _ppo-bg.py  _ppo.py  run_scripts copy 2.py  run_scripts copy.py  run_scripts.py  sample_data.py  single_eval.py  test.parquet  test_proc_8k.parquet  test_prop.parquet  thermo_metrics.py
_utils/: __init__.py  _data_utils.py  _direct_gen_utils.py  _metrics_utils.py  _model_utils.py  _notebook_utils.py  _preprocessing_utils.py  _processing_utils.py  _trainer_utils.py
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: AI_USAGE_DISCLOSURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
notebooks/: A_Challenge_set.ipynb  A_Preprocess_data.ipynb  A_Text_baseline.ipynb  B1_Pretrain_benefits.ipynb  B1b_Mattergen.ipynb  (+29 more)
(+298 files in other folders)
